--- a/config.h.in
+++ b/config.h.in
@@ -15,6 +15,12 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define if libjson-c exists. */
+#undef HAVE_LIBJSON_C
+
+/* Define if libws2_32 exists. */
+#undef HAVE_LIBWS2_32
+
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
