--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CXXFLAGS = -std=c++11 -lpthread
+AM_CXXFLAGS = $(JSON_C_LIBS) -std=c++11 -lpthread -static-libstdc++ -static-libgcc
 AM_CPPFLAGS = -I$(top_srcdir)/include
 bin_PROGRAMS = metabot
-metabot_SOURCES = metabot.cpp
+metabot_SOURCES = metabot.cpp bot.cpp
