Fix for compiling on OS X

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ AC_CHECK_HEADER([json-c/json.h],
     [],
     [#include <json-c/json.h>])
 
-PKG_CHECK_MODULES([LUA], [lua],
+PKG_CHECK_MODULES([LUA], [lua5.1],
    [AC_DEFINE([HAVE_LUA], [1], [Use LUA])],
    [PKG_CHECK_MODULES([LUA], [lua-5.1],
        [AC_DEFINE([HAVE_LUA], [1], [Use LUA])
