--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CXXFLAGS = $(LUA_LIBS) -std=c++11 -lpthread -static-libstdc++ -static-libgcc
-AM_CPPFLAGS = $(LUA_CFLAGS) -I$(top_srcdir)/include
+AM_CXXFLAGS = $(SSL_LIBS) $(LUA_LIBS) -std=c++11 -lpthread -static-libstdc++ -static-libgcc
+AM_CPPFLAGS = $(SSL_CFLAGS) $(LUA_CFLAGS) -I$(top_srcdir)/include
 bin_PROGRAMS = metabot
 metabot_SOURCES = metabot.cpp bot.cpp net.cpp
