Fixes compiling problem on Ubuntu.
Edited src/Makefile.am to move library definitions from AM_CPPFLAGS to LDADD.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CXXFLAGS = $(SSL_LIBS) $(LUA_LIBS) -std=c++11 -lpthread -static-libstdc++ -static-libgcc
-AM_CPPFLAGS = $(SSL_CFLAGS) $(LUA_CFLAGS) -I$(top_srcdir)/include
+AM_CXXFLAGS = -std=c++11 -static-libstdc++ -static-libgcc -I$(top_srcdir)/include $(SSL_CFLAGS) $(LUA_CFLAGS)
+LDADD = $(SSL_LIBS) $(LUA_LIBS) -lpthread
 bin_PROGRAMS = metabot
 metabot_SOURCES = metabot.cpp md5.cpp bot.cpp net.cpp
