Changed -lpthread to -pthread

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,5 @@
-AM_CXXFLAGS = -std=c++11 -static-libstdc++ -static-libgcc -I$(top_srcdir)/include $(SSL_CFLAGS) $(LUA_CFLAGS)
-LDADD = $(SSL_LIBS) $(LUA_LIBS) -lpthread
+AM_CXXFLAGS = -std=c++11 -I$(top_srcdir)/include $(SSL_CFLAGS) $(LUA_CFLAGS)
+AM_LDFLAGS = -pthread -static-libstdc++ -static-libgcc
+LDADD = $(SSL_LIBS) $(LUA_LIBS) 
 bin_PROGRAMS = metabot
 metabot_SOURCES = metabot.cpp md5.cpp bot.cpp net.cpp
